[package]
name = "fjall-typed"
version = "0.1.0"
edition = "2024"

[dependencies]
byteorder = "1.5.0"
byteview = "0.10.1"
facet = { version = "0.44", features = ["jiff02", "uuid"], optional = true }
facet-format = { version = "0.44", optional = true }
facet-json = { version = "0.44", optional = true }
fjall = "3.1.2"
thiserror = "2.0.18"

[features]
default = ["facet_json"]
facet_json = ["facet-json", "facet-format", "facet"]
