[package]
name = "fjall-typed"
version = "0.1.0"
edition = "2024"

[dependencies]
byteorder = "1.5.0"
byteview = "0.10.1"
facet = { version = "0.44", features = ["jiff02", "uuid"], optional = true }
facet-format = { version = "0.44", optional = true }
facet-json = { version = "0.44", optional = true }
fjall = "3.1.2"
serde = { version = "1", optional = true }
serde_json = { version = "1", optional = true }

[features]
default = ["facet_json", "serde_json"]
facet_json = ["facet-json", "facet-format", "facet"]
serde_json = ["dep:serde_json", "serde"]
